--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
-
+body { margin:0; padding:0; }
+ .wrap {
+    width:980px;
+    margin:0 auto;
+}
+.header { 
+    height:140px;
+    margin-bottom:15px;
+    background-color:#c2c5c4;
+}
+.content {
+    width:980px;
+    height:300px;
+    background-color:#c4cac9;
+    float:right;
+}
+.footer {
+    height:70px;
+    margin-top:15px;
+    background-color:#c8caca;
+}
+.clear {
+    clear:both;
+}
