--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body { margin:0; padding:0; }
 .header { 
     height:140px;
     margin-bottom:15px;
-    background-color:#c2c5c4;
+    background-color:#ffffff;
 }
 .content {
     width:980px;
