--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
 body { margin:0; padding:0; }
- .wrap {
-    width:980px;
-    margin:0 auto;
-}
+h1 {text-align: center;}
+
+
 .header { 
     height:140px;
-    margin-bottom:15px;
-    background-color:#ffffff;
+    margin: bottom 15px;
+    background-color:#b4b3b3;
 }
-.content {
+.main {
     width:980px;
     height:300px;
-    background-color:#c4cac9;
+    background-color:#b4b3b3;
     float:right;
 }
+.section {
+    text-align: center;
+}
+
 .footer {
     height:70px;
     margin-top:15px;
-    background-color:#c8caca;
+    background-color:#b4b3b3;
+    text-align: center;
 }
-.clear {
-    clear:both;
-}
+
+
