--- a/button.css
+++ b/button.css
@@ -36,12 +36,12 @@
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: rgb(82, 75, 75);
 }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
-  display: none;
+  display:list-item;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
